# simpl

./: .editorconfig  .gitignore  .go-version  .htmlvalidate.json  .mise.toml  .pre-commit-config.yaml  .prettierrc  .stylelintrc.js  .tool-versions  LICENSE  README.md  config.toml  dev-requirements.txt  go.mod  hugo.toml  hugo_stats.json  monokailight-tw.css  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js.old  pyproject.toml  renovate.json  theme.toml
.github/: dependabot.yml  release.yml
.github/workflows/: labeler.yml  pre-commit.yml  spelling.yml
assets/css/: main.css  main.old  prettier-tailwind.css  syntax.css
assets/fontawesome/: README.md
config/_default/: hugo.toml  markup.toml  module.toml
content/: _index.md
content/posts/: _index.md  _index.md.old  a-git-hook-to-ensure-dependancies-are-installed.md  foo.md  more-git-hook-greatness.md  post-1.md  post-2.md  what-first-programming-language.md
content/tw/: _index.md  bar.md  foo.md  index.md
data/: alert.toml  social.toml
layouts/: 404.html
layouts/_default/: baseof.html  baseofnew.html  home.html  less-old-list.html  list.html  new_taxonomy.html  old-list.html  old_taxonomy.html  section.html  single.html  taxonomy.html  term.html
layouts/about/: single.html
layouts/partials/: fonts.html  footer.html  head.html  header.html  menu.html  pager.html  pagination.html  post-meta.html  terms.html
layouts/posts/: list.html  single.html
layouts/tw/: list.html  (+2 more)
public/: index.html  sitemap.xml
schemas/: .editorconfig  hugo.json  prettier.json
themes/: hugo.toml
(+67 files in other folders)
