[tool.uv]
    package = false

[project]
    name = "simpl"
    version = "0.0.1"
    description = ""
    authors = [{ name = "Your Name", email = "you@example.com" }]
    license = { text = "MIT" }
    readme = "README.md"
    requires-python = ">=3.10,<3.13"
    dependencies = []

[tool.poetry]
    package-mode = false

    [tool.poetry.group.dev.dependencies]
        pre-commit = "^4.1.0"

[build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"
